ass1/initial/target/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'number'", "'bool'", 
                     "'string'", "'return'", "'var'", "'dynamic'", "'func'", 
                     "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'not'", 
                     "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'<-'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'...'", "'('", "')'", "'['", "']'", "','", 
                     "'\n'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", 
                      "BY", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "NOT", "AND", "OR", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "EQUAL", "LEFTARR", "EQUALEQUAL", "NOTEQUAL", 
                      "LESS", "GREATER", "LESSOREQUAL", "GREATEROREQUAL", 
                      "ELLIPSIS", "LBracket", "RBracket", "LSBracket", "RSBracket", 
                      "COMMA", "NEWLINE", "NumberLit", "StringLit", "BoolLit", 
                      "IDENTIFIER", "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_literal = 0
    RULE_nullableListOfNEWLINE = 1
    RULE_listOfNEWLINE = 2
    RULE_program = 3
    RULE_globalLevelDecl = 4
    RULE_globalLevelDeclList = 5
    RULE_globalLevelDeclListPrime = 6
    RULE_blockLevelDecl = 7
    RULE_blockLevelDeclList = 8
    RULE_blockLevelDeclListPrime = 9
    RULE_functionDecl = 10
    RULE_functionDecl1 = 11
    RULE_arrayDeclaration = 12
    RULE_arrayDim = 13
    RULE_arrayAssign = 14
    RULE_arrayElementList = 15
    RULE_arrayList = 16
    RULE_literalList = 17
    RULE_elementAccessExpr = 18
    RULE_arrExpr = 19
    RULE_indexList = 20
    RULE_functionCall = 21
    RULE_functionArgsList = 22
    RULE_argsPrime = 23
    RULE_arg = 24
    RULE_assignStatement = 25
    RULE_scalarAssignStatement = 26
    RULE_arrayAssignStatement = 27
    RULE_statement = 28
    RULE_variableDeclaration = 29
    RULE_normalDeclaration = 30
    RULE_varType = 31
    RULE_varDecl = 32
    RULE_dynamicDecl = 33
    RULE_variableInitialization = 34
    RULE_paramDeclList = 35
    RULE_paramDeclPrime = 36
    RULE_paramDeclAtom = 37
    RULE_functionPreDecl = 38
    RULE_functionFullDecl = 39
    RULE_paramDecl = 40
    RULE_functionBody = 41
    RULE_ifStatement = 42
    RULE_elifStatementList = 43
    RULE_elifStatementPrime = 44
    RULE_elifStatement = 45
    RULE_elseStatement = 46
    RULE_forStatement = 47
    RULE_updateExpr = 48
    RULE_breakStatement = 49
    RULE_continueStatement = 50
    RULE_returnStatement = 51
    RULE_functionCallStatement = 52
    RULE_blockStatement = 53
    RULE_blockStatementBody = 54
    RULE_nullableListOfStatement = 55
    RULE_nullableListOfStatementPrime = 56
    RULE_expressionList = 57
    RULE_expression = 58
    RULE_expression1 = 59
    RULE_expression2 = 60
    RULE_expression3 = 61
    RULE_expression4 = 62
    RULE_expression5 = 63
    RULE_expression6 = 64
    RULE_expression7 = 65
    RULE_operands = 66

    ruleNames =  [ "literal", "nullableListOfNEWLINE", "listOfNEWLINE", 
                   "program", "globalLevelDecl", "globalLevelDeclList", 
                   "globalLevelDeclListPrime", "blockLevelDecl", "blockLevelDeclList", 
                   "blockLevelDeclListPrime", "functionDecl", "functionDecl1", 
                   "arrayDeclaration", "arrayDim", "arrayAssign", "arrayElementList", 
                   "arrayList", "literalList", "elementAccessExpr", "arrExpr", 
                   "indexList", "functionCall", "functionArgsList", "argsPrime", 
                   "arg", "assignStatement", "scalarAssignStatement", "arrayAssignStatement", 
                   "statement", "variableDeclaration", "normalDeclaration", 
                   "varType", "varDecl", "dynamicDecl", "variableInitialization", 
                   "paramDeclList", "paramDeclPrime", "paramDeclAtom", "functionPreDecl", 
                   "functionFullDecl", "paramDecl", "functionBody", "ifStatement", 
                   "elifStatementList", "elifStatementPrime", "elifStatement", 
                   "elseStatement", "forStatement", "updateExpr", "breakStatement", 
                   "continueStatement", "returnStatement", "functionCallStatement", 
                   "blockStatement", "blockStatementBody", "nullableListOfStatement", 
                   "nullableListOfStatementPrime", "expressionList", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "operands" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NUMBER=3
    BOOL=4
    STRING=5
    RETURN=6
    VAR=7
    DYNAMIC=8
    FUNC=9
    FOR=10
    UNTIL=11
    BY=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELSE=16
    ELIF=17
    BEGIN=18
    END=19
    NOT=20
    AND=21
    OR=22
    PLUS=23
    MINUS=24
    MULT=25
    DIV=26
    MOD=27
    EQUAL=28
    LEFTARR=29
    EQUALEQUAL=30
    NOTEQUAL=31
    LESS=32
    GREATER=33
    LESSOREQUAL=34
    GREATEROREQUAL=35
    ELLIPSIS=36
    LBracket=37
    RBracket=38
    LSBracket=39
    RSBracket=40
    COMMA=41
    NEWLINE=42
    NumberLit=43
    StringLit=44
    BoolLit=45
    IDENTIFIER=46
    COMMENT=47
    WS=48
    ERROR_CHAR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NumberLit(self):
            return self.getToken(ZCodeParser.NumberLit, 0)

        def BoolLit(self):
            return self.getToken(ZCodeParser.BoolLit, 0)

        def StringLit(self):
            return self.getToken(ZCodeParser.StringLit, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = ZCodeParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NumberLit) | (1 << ZCodeParser.StringLit) | (1 << ZCodeParser.BoolLit))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NullableListOfNEWLINEContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def nullableListOfNEWLINE(self):
            return self.getTypedRuleContext(ZCodeParser.NullableListOfNEWLINEContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_nullableListOfNEWLINE

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullableListOfNEWLINE" ):
                return visitor.visitNullableListOfNEWLINE(self)
            else:
                return visitor.visitChildren(self)




    def nullableListOfNEWLINE(self):

        localctx = ZCodeParser.NullableListOfNEWLINEContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nullableListOfNEWLINE)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(ZCodeParser.NEWLINE)
                self.state = 137
                self.nullableListOfNEWLINE()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.RETURN, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.ELIF, ZCodeParser.BEGIN, ZCodeParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListOfNEWLINEContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def listOfNEWLINE(self):
            return self.getTypedRuleContext(ZCodeParser.ListOfNEWLINEContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_listOfNEWLINE

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListOfNEWLINE" ):
                return visitor.visitListOfNEWLINE(self)
            else:
                return visitor.visitChildren(self)




    def listOfNEWLINE(self):

        localctx = ZCodeParser.ListOfNEWLINEContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listOfNEWLINE)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(ZCodeParser.NEWLINE)
                self.state = 142
                self.listOfNEWLINE()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(ZCodeParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullableListOfNEWLINE(self):
            return self.getTypedRuleContext(ZCodeParser.NullableListOfNEWLINEContext,0)


        def globalLevelDeclList(self):
            return self.getTypedRuleContext(ZCodeParser.GlobalLevelDeclListContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.nullableListOfNEWLINE()
            self.state = 147
            self.globalLevelDeclList()
            self.state = 148
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionDeclContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(ZCodeParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_globalLevelDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalLevelDecl" ):
                return visitor.visitGlobalLevelDecl(self)
            else:
                return visitor.visitChildren(self)




    def globalLevelDecl(self):

        localctx = ZCodeParser.GlobalLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_globalLevelDecl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.functionDecl()
                pass
            elif token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.variableDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalLevelDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalLevelDeclListPrime(self):
            return self.getTypedRuleContext(ZCodeParser.GlobalLevelDeclListPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_globalLevelDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalLevelDeclList" ):
                return visitor.visitGlobalLevelDeclList(self)
            else:
                return visitor.visitChildren(self)




    def globalLevelDeclList(self):

        localctx = ZCodeParser.GlobalLevelDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_globalLevelDeclList)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.globalLevelDeclListPrime()
                pass
            elif token in [ZCodeParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalLevelDeclListPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalLevelDecl(self):
            return self.getTypedRuleContext(ZCodeParser.GlobalLevelDeclContext,0)


        def listOfNEWLINE(self):
            return self.getTypedRuleContext(ZCodeParser.ListOfNEWLINEContext,0)


        def globalLevelDeclListPrime(self):
            return self.getTypedRuleContext(ZCodeParser.GlobalLevelDeclListPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_globalLevelDeclListPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalLevelDeclListPrime" ):
                return visitor.visitGlobalLevelDeclListPrime(self)
            else:
                return visitor.visitChildren(self)




    def globalLevelDeclListPrime(self):

        localctx = ZCodeParser.GlobalLevelDeclListPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_globalLevelDeclListPrime)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.globalLevelDecl()
                self.state = 159
                self.listOfNEWLINE()
                self.state = 160
                self.globalLevelDeclListPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.globalLevelDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionDeclContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(ZCodeParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_blockLevelDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockLevelDecl" ):
                return visitor.visitBlockLevelDecl(self)
            else:
                return visitor.visitChildren(self)




    def blockLevelDecl(self):

        localctx = ZCodeParser.BlockLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockLevelDecl)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.functionDecl()
                pass
            elif token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.variableDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockLevelDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockLevelDeclListPrime(self):
            return self.getTypedRuleContext(ZCodeParser.BlockLevelDeclListPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_blockLevelDeclList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockLevelDeclList" ):
                return visitor.visitBlockLevelDeclList(self)
            else:
                return visitor.visitChildren(self)




    def blockLevelDeclList(self):

        localctx = ZCodeParser.BlockLevelDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockLevelDeclList)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.blockLevelDeclListPrime()
                pass
            elif token in [ZCodeParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockLevelDeclListPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockLevelDecl(self):
            return self.getTypedRuleContext(ZCodeParser.BlockLevelDeclContext,0)


        def listOfNEWLINE(self):
            return self.getTypedRuleContext(ZCodeParser.ListOfNEWLINEContext,0)


        def blockLevelDeclListPrime(self):
            return self.getTypedRuleContext(ZCodeParser.BlockLevelDeclListPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_blockLevelDeclListPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockLevelDeclListPrime" ):
                return visitor.visitBlockLevelDeclListPrime(self)
            else:
                return visitor.visitChildren(self)




    def blockLevelDeclListPrime(self):

        localctx = ZCodeParser.BlockLevelDeclListPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockLevelDeclListPrime)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.blockLevelDecl()
                self.state = 174
                self.listOfNEWLINE()
                self.state = 175
                self.blockLevelDeclListPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.blockLevelDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl1(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionDecl1Context,0)


        def functionPreDecl(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionPreDeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = ZCodeParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDecl)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.functionDecl1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.functionPreDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDecl1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionFullDecl(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionFullDeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_functionDecl1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl1" ):
                return visitor.visitFunctionDecl1(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl1(self):
